tests/files/lexer_tests/should_fail/017.cmdr
// Illegal character in string (ascii 17)
var = ''